--- a/.mypy.ini
+++ b/.mypy.ini
@@ -1,3 +1,12 @@
 [mypy]
 python_version = 3.9
 plugins = numpy.typing.mypy_plugin
+
+[mypy-matplotlib.*]
+ignore_missing_imports = True
+
+[mypy-casadi.*]
+ignore_missing_imports = True
+
+[mypy-scipy.*]
+ignore_missing_imports = True
