--- a/.mypy.ini
+++ b/.mypy.ini
@@ -10,3 +10,6 @@ ignore_missing_imports = True
 
 [mypy-scipy.*]
 ignore_missing_imports = True
+
+[mypy-sym_metanet.*]
+ignore_missing_imports = True
