updated mypy config

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -2,10 +2,16 @@
 python_version = 3.9
 plugins = numpy.typing.mypy_plugin
 
+[mypy-casadi.*]
+ignore_missing_imports = True
+
+[mypy-csnlp.*]
+ignore_missing_imports = True
+
 [mypy-matplotlib.*]
 ignore_missing_imports = True
 
-[mypy-casadi.*]
+[mypy-mpcrl.*]
 ignore_missing_imports = True
 
 [mypy-scipy.*]
