added some mypy configs

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -8,6 +8,9 @@ ignore_missing_imports = True
 [mypy-csnlp.*]
 ignore_missing_imports = True
 
+[mypy-joblib.*]
+ignore_missing_imports = True
+
 [mypy-matplotlib.*]
 ignore_missing_imports = True
 
@@ -18,4 +21,7 @@ ignore_missing_imports = True
 ignore_missing_imports = True
 
 [mypy-sym_metanet.*]
+ignore_missing_imports = True
+
+[mypy-tqdm.*]
 ignore_missing_imports = True
