--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,7 @@ dmypy.json
 .pyre/
 
 # Others
-vscode
+.vscode
 /_*
 venv
 jit_tmp*.c
@@ -139,3 +139,4 @@ libpardiso.lib
 pardiso.lic
 tmp_casadi_compiler*.o
 tmp_casadi_compiler*.so
+
