--- a/.mypy.ini
+++ b/.mypy.ini
@@ -26,3 +26,9 @@ ignore_missing_imports = True
 
 [mypy-tqdm.*]
 ignore_missing_imports = True
+
+[mypy-gymnasium.*]
+ignore_missing_imports = True
+
+[mypy-tikzplotlib.*]
+ignore_missing_imports = True
